--- a/client/style.css
+++ b/client/style.css
@@ -10,6 +10,9 @@ body {
 body div canvas {
     background: black;
     border: solid;
+    max-width: 100%;
+    max-height: 90%;
+    overflow: hidden;
 }
 
 h1,
