fix: mobile controls

--- a/client/style.css
+++ b/client/style.css
@@ -30,10 +30,18 @@ p {
 .mobile-controls {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    gap: 3cm;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.mobile-move-controls {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     gap: 1cm;
     text-align: center;
-    margin-top: 10px;
 }
 
 .mobile-controls button {
